change img class and fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -177,10 +177,6 @@ img {
   padding: 0.2em;
 }
 
-img {
-  max-width: 100%;
-  display: block;
-}
 
 /**
 * .component-page__main-header
@@ -252,7 +248,6 @@ h2.cover-section__title {
   font-family: var(--font-serif);
   font-weight: bold;
   font-size: 4vmin;
-  /*font-size: calc(26px + 4vw);*/
   line-height: 1.2;
   font-weight: 400;
 }
@@ -260,24 +255,6 @@ h2.cover-section__title {
   font-size: 1.3em;
 }
 
-/* Projects */
-
-.projects-intro {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.project__text {
-  font-size: 1rem;
-  padding-top: 0.7em;
-  font-weight: 200;
-  margin-top: 0.5em;
-}
-
-.project__image {
-  cursor: url("https://img.icons8.com/ios/50/000000/long-arrow-right.png"), auto;
-}
 
 /**
 ** .component-page__subscribe-section
@@ -291,6 +268,8 @@ h2.cover-section__title {
   display: flex;
   justify-content: flex-end;
 }
+
+
 
 /**
 ** .component-page__footer
@@ -342,6 +321,71 @@ h2.cover-section__title {
   margin: 0;
 }
 
+
+/******** Main Page*********/
+
+
+/* Projects */
+
+.project__container {
+  margin-bottom: 1.5em;
+}
+
+.projects-intro {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+}
+
+.project__text {
+  font-size: 1rem;
+  padding-top: 0.7em;
+  font-weight: 200;
+  margin-top: 0.5em;
+}
+
+.project__image {
+  cursor: url("https://img.icons8.com/ios/50/000000/long-arrow-right.png"), auto;
+}
+
+
+/**/
+
+.section-services {
+  display: flex;
+  flex-direction: column;
+  background: var(--color-pink);
+  padding: 1em;
+  text-align: center;
+}
+
+.section__title--services {
+  font-size: 5vmin;
+}
+.cover-section__text--ourstory {
+  max-width: 35rem;
+}
+.hero-section__title--main {
+  font-size: 9vmin;
+}
+.hero-section {
+  margin-top: 2em;
+}
+
+/****.subscribe-section
+*/
+
+.subscribe-section {
+  background: var(--color-pink);
+}
+.subscribe-section__container,
+.page-footer-nav {
+  margin: 0 15rem;
+  padding: 1em 0;
+}
+
+
 /****.recent-news
 */
 .news__title:hover {
@@ -362,7 +406,7 @@ h2.cover-section__title {
 /**.recent-news-list
 */
 
-.img {
+.hover-over-img {
   display: none;
   position: absolute;
   z-index: -1;
@@ -399,50 +443,6 @@ h3.news__title {
   font-family: var(--font-serif);
 }
 
-/****.subscribe-section
-*/
-
-.subscribe-section {
-  background: var(--color-pink);
-}
-.subscribe-section__container,
-.page-footer-nav {
-  margin: 0 15rem;
-  padding: 1em 0;
-}
-
-/******** Main Page*********/
-
-/*** main-page__home
-*/
-.projects-intro {
-  text-align: center;
-}
-
-.project__container {
-  margin-bottom: 1.5em;
-}
-
-.section-services {
-  display: flex;
-  flex-direction: column;
-  background: var(--color-pink);
-  padding: 1em;
-  text-align: center;
-}
-
-.section__title--services {
-  font-size: 5vmin;
-}
-.cover-section__text--ourstory {
-  max-width: 35rem;
-}
-.hero-section__title--main {
-  font-size: 9vmin;
-}
-.hero-section {
-  margin-top: 2em;
-}
 
 /*main-page__layout
 */
@@ -471,6 +471,10 @@ h3.news__title {
   clip: rect(1px, 1px, 1px, 1px);
   white-space: nowrap; /* added line */
 }
+
+
+/**** Media Queries ****/
+
 
 /* larger screens */
 @media (min-width: 768px) {
